--- a/bak.tex
+++ b/bak.tex
@@ -21,7 +21,6 @@
 	%\setlength{\textheight}{660pt}
 	%\setlength{\tabcolsep}{0pt}
 
-
 	\setlength\textwidth{145mm}
 	\setlength\textheight{247mm}
 	\setlength\oddsidemargin{15mm}
@@ -41,6 +40,7 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\powerset}[1]{\mathcal{P} ( #1 )}   
+\newcommand{\termdef}[1]{\textnormal{\textbf{#1}}}
 
 
 \newtheorem{theorem}{Theorem}[]
@@ -87,7 +87,7 @@ $$y_k(0)e^{\lambda_kt}=y_k(0)e^{at}e^{bit}.$$
 We know, that $|e^{bit}|=1$ and that $y_k(0)$ is a constant, so the crucial part is $e^{at}$. This converges to 0 if and only if $a$ is negative. Therefore we can stabilize our ``machine'' if we find such matrix $F \in \C^{n \times n}$ that $A+BF$ is diagonalizable with eigenvalues with negative real part. This can be expressed through characteristic polynomial of matrix $A+BF$. We will denote characteristic polynomial of a matrix $A$ by $\chi_A$. Through our observations we got to a conclusion that we need to satisfy $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n),$$ where $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ and their real part is negative. This leads to important definition.
 
 \begin{definition}
-	We say that polynomial $\chi$ is \textnormal{\textbf{assignable}} for the pair $(A,B)$ if there exists such matrix $F$ that $$\chi_{A+BF}=\chi$$
+	We say that polynomial $\chi$ is \termdef{assignable} for the pair $(A,B)$ if there exists such matrix $F$ that $$\chi_{A+BF}=\chi$$
 \end{definition}
 
 The pole shifting theorem states, that if $A$ and $B$ are ``sensible'' in a sense that we will discuss in the next section, then arbitrary polynomial $\chi$ of dimension that depends on how ``sensible'' $A$ and $B$ are, can be assigned to pair $(A,B)$.
@@ -97,17 +97,15 @@ The pole shifting theorem states, that if $A$ and $B$ are ``sensible'' in a sens
 States that we can reach in set number of iterations can be derived as follows. From state $x_k$ and control vector $u_k$ is the next state $x_{k+1}$ computed by equation $$x_{k+1}=Ax_k+Bu_k.$$ The starting condition is $x_0=\textbf{o}$ and we can choose arbitrary $u_k$. Then, for $k=0$ we have $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B.$$ For $k=2$ we get $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text{Im}(AB|B).$$ It is clear, that $$x_k\in\text{Im}(A^{k-1}B|\ldots|AB|B).$$ We can observe that $\text{Im}(B|AB|\ldots|A^kB) \subseteq \text{Im}(B|AB|\ldots|A^{k+1}B)$. Then, from Cayley-Hamilton theorem we know, that $$\text{Im}(B|AB|\ldots|A^{n-1}B)=\text{Im}(B|AB|\ldots|A^{n-1}B|A^nB).$$ Therefore all the states we could ever reach are already in space $$\text{Im}(B|AB|\ldots|A^{n-1}B).$$
 
 \begin{definition}
-	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We define \textnormal{\textbf{reachable space}} $\mathcal{R}(A,B)$ as $\text{Im}(B|AB|\ldots|A^{n-1}B)$.
+	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. We define \termdef{reachable space}$\mathcal{R}(A,B)$ as $\text{Im}(B|AB|\ldots|A^{n-1}B)$.
 \end{definition}
 
 From observations above it is clear that for arbitrary $v\in\mathcal{R}(A,B)$ we have $Av\in\mathcal{R}(A,B)$. This property is called $A$-\textit{invariance}.
 
-%Sometimes, when the context is clear, we will refer to $\mathcal{R}(A,B)$ only as $\mathcal{R}$. 
-
 The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the ``machine'' into any state by controlling it with our control matrix $B$. Therefore we desire that the dimension of reachable space is equal to $n$. 
 
 \begin{definition}
-	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \textnormal{\textbf{controllable}} or \textnormal{\textbf{reachable}} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
+	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} or \termdef{reachable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
 \end{definition}
 
 If $(A,B)$ are not controllable then there exists subspace of our state space that is not affected by our input. This can be shown using following theorem.
@@ -137,18 +135,67 @@ If $(A,B)$ are not controllable then there exists subspace of our state space th
 	As for $\widetilde{A}$ we have $$\widetilde{A}=T^{-1}AT=[\text{id}]^C_KA[\text{id}]^K_C$$ From the fact that $\mathcal{R}(A,B)$ is $A$-invariant it follows that $$AT=(u_1|\ldots|u_r|z_1|\ldots|z_{n-r})$$ where $u_i \in \mathcal{R}(A,B)$ and $z_i \in \mathcal{S}$. Therefore, when we express these vectors in the basis $K$ (by left multiplying $AT$ by $T^{-1}=[\text{id}]^C_K$) we get the required structure of matrix $\widetilde{A}$.
 \end{proof}
 
-It is also true that $(A_1,B_1)$ is a controllable pair.
-
-\begin{proof}
-	From the proof of Theorem \ref{theorem:decomp} we see that $A_1$ is composed of coordinates of vectors $u_1,\ldots,u_r \in \mathcal{R}(A,B)$ expressed in the basis $K$ and that $B_1$ is also composed of coordinates of column vectors of matrix $B$ expressed in the basis $K$. We know that $\text{dim}\mathcal{R}(A,B)=r$. We also desire $\text{dim}\mathcal{R}(A_1,B_1)=r$
-\end{proof}
-
 We can interpret the above decomposition as follows. Consider our system $\dot{x}(t)=Ax(t)+Bu(t)$. By changing the basis by putting $x(t)=Ty(t)$ we get $$T\dot{y}(t)=ATy(t)+Bu(t)$$ which we can write as $$\dot{y}(t)=T^{-1}ATy(t)+T^{-1}Bu(t)=\widetilde{A}y(t)+\widetilde{B}u(T)$$ Which gives us 
 \begin{alignat*}{2}
 	\dot{y}_1(t)&=A_1y_1(t)+&A_2y_2(t)&+B_1u_1(t) \\
 	\dot{y}_2(t)&=&A_3y_2(t)&
 \end{alignat*}
-where $y_1(t)$ is the first $r$ elements of $y(t)$, $y_2(t)$ is the other elements of $y(t)$ and $u_1(t)$ is the first $r$ elements of $u(t)$. It is clear that we cannot control $\dot{y}_2$ by any means. We also see that 
+where $y_1(t)$ is the first $r$ elements of $y(t)$, $y_2(t)$ is the other elements of $y(t)$ and $u_1(t)$ is the first $r$ elements of $u(t)$. It is clear that we cannot control $\dot{y}_2$ by any means. 
+
+It is also true that $(A_1,B_1)$ is a controllable pair which we will state in a lemma.
+
+\begin{lemma}
+	The pair $(A_1,B_1)$ is controllable.
+\end{lemma}
+
+\begin{proof}
+	We know that $\text{dim}\mathcal{R}(A,B)=r$. We desire $\text{dim}\mathcal{R}(A_1,B_1)=r$. We will show that $\mathcal{R}(\widetilde{A},\widetilde{B})=\mathcal{R}(A,B)$ and that each vector in $\mathcal{R}(\widetilde{A},\widetilde{B})$ has its last $n-r$ elements equal to 0 and that $\mathcal{R}(\widetilde{A},\widetilde{B})$ restricted on its first $r$ coordinates is equal to $\mathcal{R}(A_1,B_1)$. 
+	\begin{align*}
+		\mathcal{R}(\widetilde{A},\widetilde{B})&=\text{Im}(\widetilde{A}^{n-1}\widetilde{B}|\ldots|\widetilde{A}\widetilde{B}|\widetilde{B}) \\
+		&=\text{Im}((T^{-1}AT)^{n-1}T^{-1}B|\ldots|T^{-1}ATT^{-1}B|T^{-1}B) \\
+		&=\text{Im}(T^{-1}A^{n-1}B|\ldots|T^{-1}AB|T^{-1}B) \\
+		&=T^{-1}\cdot\text{Im}(A^{n-1}B|\ldots|AB|B) \\
+		&=T^{-1}\cdot\mathcal{R}(A,B)
+	\end{align*}
+	Since $T$ is an invertible matrix, which preserves linear independence, we have $$\text{dim}\mathcal{R}(\widetilde{A},\widetilde{B})=\text{dim}(T^{-1}\mathcal{R}(A,B))=\text{dim}(\mathcal{R}(A,B))=r$$
+
+	Now, for the structure of $\mathcal{R}(\widetilde{A},\widetilde{B})$: We know that last $n-r$ rows of $\widetilde{B}$ are $\textbf{o}$. Also because of structure of $\widetilde{A}$ we have for arbitrary matrix $X\in\K^{r\times m}$ that 
+	\begin{equation*}
+		\widetilde{A}
+		\begin{pmatrix}
+			X \\
+			0
+		\end{pmatrix}
+		=
+		\begin{pmatrix}
+			A_1 & A_2 \\
+			  0 & A_3
+		\end{pmatrix}
+		\begin{pmatrix}
+			X \\
+			0
+		\end{pmatrix}
+		=
+		\begin{pmatrix}
+			A_1X \\
+			0
+		\end{pmatrix}
+	\end{equation*}
+	which again has the last $n-r$ rows equal to $\textbf{o}$. Therefore we see that for any positive integer $k$ we have 
+	\begin{equation*}
+		\widetilde{A}^k\widetilde{B}=
+		\begin{pmatrix}
+			A_1^{k}B_1 \\
+			0
+		\end{pmatrix}
+	\end{equation*}
+	
+	From Cayle-Hemilton theorem we therefore again have that the first $r$ coordinates (those which are not 0) of $\mathcal{R}(\widetilde{A},\widetilde{B})$ are equal to $\mathcal{R}(A_1,B_1)$. It follows that $$\text{dim}\mathcal{R}(A_1,B_1)=\text{dim}\mathcal{R}(\widetilde{A},\widetilde{B})=\text{dim}\mathcal{R}(A,B)=r$$
+\end{proof}
+
+Now we can see that the decomposition from Theorem \ref{theorem:decomp} decomposes the matrix $A$ into ``controllable'' and ``uncontrollable'' parts $A_1$ and $A_3$ respectively.
+
+We also see that 
 \begin{align*}
 	\chi_{\widetilde{A}}&=\text{det}(sI-\widetilde{A})=\text{det}(sI-T^{-1}AT) \\
 	&=\text{det}(sT^{-1}IT-T^{-1}AT)=\text{det}(T^{-1}(sI-A)T) \\
@@ -158,9 +205,13 @@ where $y_1(t)$ is the first $r$ elements of $y(t)$, $y_2(t)$ is the other elemen
 therefore it holds $$\chi_A=\chi_{A_1}\chi_{A_3}$$ 
 
 \begin{definition}
-	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as above. Then $(A,B)$ \textnormal{\textbf{is similar to}} $(\widetilde{A},\widetilde{B})$, denoted $$(A,B) \sim (\widetilde{A},\widetilde{B})$$ if there exists invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
+	The characteristic polynomial of matrix $A$ splits into \termdef{controllable} and \termdef{uncontrollable parts} with respect to pair $(A,B)$ which we denote by $\chi_c$ and $\chi_u$ respectively. We define these polynomials as $$\chi_c=\chi_{A_1} \qquad \chi_u=\chi_{A_3}$$
+
+	In case $r=0$ we put $\chi_c=1$ and in case $r=n$ we put $\chi_u=1$.
 \end{definition}
 
-
+\begin{definition}
+	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $$(A,B) \sim (\widetilde{A},\widetilde{B})$$ if there exists invertible matrix $T$ for which it holds that $$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B$$
+\end{definition}
 
 \end{document}
