--- a/thesis.tex
+++ b/thesis.tex
@@ -55,7 +55,7 @@
 	
 	% Study programme and specialization
 	\def\StudyProgramme{Mathematics}
-	\def\StudyBranch{MAthematical Structures}
+	\def\StudyBranch{Mathematical Structures}
 
 	% 3 to 5 keywords (recommended), each enclosed in curly braces
 	\def\Keywords{%
@@ -72,6 +72,7 @@
 \include{macros}
 
 \begin{document}
+
 \include{title}
 
 \openright
