--- a/macros.tex
+++ b/macros.tex
@@ -5,6 +5,7 @@
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\powerset}[1]{\mathcal{P} ( #1 )}   
 \newcommand{\termdef}[1]{\textnormal{\textbf{#1}}}
+\newcommand{\nullvector}{\textbf{o}}
 
 \makeatletter
 \renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
@@ -16,6 +17,8 @@
 \newtheorem{theorem}{Theorem}[]
 \newtheorem{lemma}{Lemma}[]
 \newtheorem{cor}{Corollary}[]
+\newtheorem{claim}{Claim}[]
 \newtheorem*{definition}{Definition}
+\newtheorem{remark}{Remark}
 
 \newcommand{\bigO}{\mathcal{O}}
