--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,5 @@
 %\documentclass[a4paper,11pt]{article}
+%\documentclass[12pt,a4paper]{report}
 \documentclass[12pt,a4paper]{report}
 	\usepackage[utf8]{inputenc}
 	\usepackage[english]{babel}
